--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask==2.2.3
-Jinja2==3.1.2
-joblib==1.2.0
-matplotlib==3.7.1
-Pillow==9.2.0
+Flask
+Jinja2
+joblib
+Pillow
 pandas
 numpy
+gunicorn
+os
+scikit-learn
